--- a/control.html
+++ b/control.html
@@ -5,205 +5,124 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Smart Door System — Control</title>
 
-  <!-- Bootstrap 5 (CSS) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
-    :root{
-      --bg1:#2c2c2c; --bg2:#1a1a1a;
-      --card:#2f2f2f; --list:#3a3a3a; --list-hover:#4a4a4a; --text:#fff;
+    :root {
+      --bg1: #2c2c2c; --bg2: #1a1a1a;
+      --card: #2f2f2f; --list: #3a3a3a; --list-hover: #4a4a4a; --text: #fff;
     }
-    body{
-      background: linear-gradient(120deg,var(--bg1),var(--bg2));
-      color:var(--text);
+    body {
+      background: linear-gradient(120deg, var(--bg1), var(--bg2));
+      color: var(--text);
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Inter,"Plus Jakarta Sans",Arial,sans-serif;
     }
-    h1{
-      text-align:center; font-weight:800; letter-spacing:.05em;
-      margin:40px 0 24px;
+    h1 {
+      text-align: center; font-weight: 800; letter-spacing: .05em;
+      margin: 40px 0 24px;
     }
-    .control-card{
-      background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
+    .control-card {
+      background: var(--card); border: 0; border-radius: 16px; overflow: hidden;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, .15);
     }
-    .btn-toggle{
-      width:100%; text-align:left; padding:16px 20px; font-weight:700; color:#fff;
-      background:transparent; border:0;
+    .list-group-item {
+      background: var(--list); border: 0; color: var(--text);
+      padding: 12px 20px; font-weight: 500;
     }
-    .btn-toggle:hover{ background:rgba(255,255,255,.05); }
-    .list-group-dark .list-group-item{
-      background:var(--list); color:#fff; border-color:rgba(255,255,255,.05);
+    .list-group-item:hover {
+      background: var(--list-hover);
     }
-    .list-group-dark .list-group-item:hover{ background:var(--list-hover); }
-    .ms-3{ margin-left:1rem !important; }
-    button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
-    button.cmd-btn:hover {text-decoration:underline;}
   </style>
 </head>
+
 <body>
-  <div class="container py-3">
-    <h1>SMART DOOR SYSTEM</h1>
+  <main class="container">
+    <h1>Smart Door System 🚪</h1>
 
-    <!-- ========== OPTIONS ========== -->
-    <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#sdsOptions"
-              aria-expanded="false" aria-controls="sdsOptions"
-              onclick="closeInnerMenus('#sdsOptions')">
-        Smart Door System Options
-      </button>
-
-      <div id="sdsOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-
-          <!-- Open Door -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#openDoorMenu"
-                    aria-expanded="false" aria-controls="openDoorMenu">
-              Open Door
-            </button>
-            <div id="openDoorMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('normal_door')">open door & close it</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_openn')">open door only</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('door_closee')">close door only</button></li>
-              </ul>
+    <div class="row">
+      <div class="col-12 col-md-8 mx-auto">
+        <div class="row" style="display: none;" id="livestreamBox">
+          <div class="col-12 col-md-8 mx-auto">
+            <div class="card p-3 my-3">
+              <h2>Live Stream</h2>
+              <iframe
+                src="https://player.twitch.tv/?channel=jq7v444&parent=10.183.115.162"
+                height="480"
+                width="100%"
+                allowfullscreen="true">
+              </iframe>
             </div>
-          </li>
+          </div>
+        </div>
 
-          <!-- Toggle Camera -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#cameraMenu"
-                    aria-expanded="false" aria-controls="cameraMenu">
-              Toggle Camera
-            </button>
-            <div id="cameraMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start camera')">start camera</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop camera')">stop camera</button></li>
-              </ul>
+        <div class="card control-card p-4">
+          <h2 class="h4">Controls</h2>
+          <div class="accordion accordion-flush mt-3" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne">
+                  Camera & Stream
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item" onclick="sendCommand('start camera');">Start Camera</li>
+                  <li class="list-group-item" onclick="sendCommand('stop camera');">Stop Camera</li>
+                  <li class="list-group-item" onclick="sendCommand('start_stream');">Start Stream</li>
+                  <li class="list-group-item" onclick="sendCommand('stop_stream');">Stop Stream</li>
+                </ul>
+              </div>
             </div>
-          </li>
 
-          <!-- Toggle of the System -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#systemMenu"
-                    aria-expanded="false" aria-controls="systemMenu">
-              Toggle of the System
-            </button>
-            <div id="systemMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_loc')">lock system</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_unloc')">unlock system</button></li>
-              </ul>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo">
+                  Door
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item" onclick="sendCommand('door_openn');">Open Door</li>
+                  <li class="list-group-item" onclick="sendCommand('door_closee');">Close Door</li>
+                </ul>
+              </div>
             </div>
-          </li>
 
-          <!-- Penalty Activate -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#penaltyMenu"
-                    aria-expanded="false" aria-controls="penaltyMenu">
-              Penalty Activate
-            </button>
-            <div id="penaltyMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen')">the system penalty</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen30')">extended to 30 seconds</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_pen60')">extended to 1 minutes</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzcof')">penalty with coffin dance buzzer</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzzpoc')">penalty with pirates of the caribbean</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('sys_buzztok')">penalty with tokyo</button></li>
-              </ul>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree">
+                  System
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item" onclick="sendCommand('sys_unloc');">Unlock</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_loc');">Lock</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_pen');">Permanent Unlock</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_pen30');">Permanent Unlock (30s)</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_pen60');">Permanent Unlock (60s)</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_buzzcof');">Buzz On Call for Help</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_buzzpoc');">Buzz On Person Coming</li>
+                  <li class="list-group-item" onclick="sendCommand('sys_buzztok');">Buzz On Time Out Key</li>
+                </ul>
+              </div>
             </div>
-          </li>
-
-          <!-- Toggle Livestream -->
-          <li class="list-group-item">
-            <button type="button" class="btn-toggle ps-0"
-                    data-bs-toggle="collapse" data-bs-target="#streamMenu"
-                    aria-expanded="false" aria-controls="streamMenu">
-              Toggle Livestream
-            </button>
-            <div id="streamMenu" class="collapse" data-bs-parent="#sdsOptions">
-              <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start_stream')">start livestream</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop_stream')">stop livestream</button></li>
-              </ul>
-            </div>
-          </li>
-
-        </ul>
+          </div>
+        </div>
       </div>
     </div>
+  </main>
 
-    <!-- LIVESTREAM VIDEO BOX -->
-    <div id="livestreamBox" style="display:none; margin-top:20px;" class="card control-card">
-      <h3 class="p-3">📺 Livestream</h3>
-      <div class="ratio ratio-16x9">
-        <iframe id="twitchStream"
-          src="https://player.twitch.tv/?channel=jq7v444&parent=10.183.115.162"
-          frameborder="0" allowfullscreen="true" scrolling="no">
-        </iframe>
-      </div>
-    </div>
-
-  </div>
-
-<!-- ========== ADD-ON OPTIONS ========== -->
-    <div class="card control-card">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#addonOptions"
-              aria-expanded="false" aria-controls="addonOptions"
-              onclick="closeInnerMenus('#addonOptions')">
-        Smart Door System Add-on Options
-      </button>
-      <div id="addonOptions" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-          <li class="list-group-item"><a href="downloads/colors.png" download>TKinter Color Chart</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- ========== EXPLANATION ========== -->
-    <div class="card control-card mb-5">
-      <button type="button" class="btn-toggle"
-              data-bs-toggle="collapse" data-bs-target="#explain"
-              aria-expanded="false" aria-controls="explain"
-              onclick="closeInnerMenus('#explain')">
-        Smart Door System Explanation
-      </button>
-      <div id="explain" class="collapse">
-        <ul class="list-group list-group-flush list-group-dark">
-         <li class="list-group-item"><a href="downloads/smart door system - project arduino components.pptx" download>Arduino Components</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system - project python components.pptx" download>Python Components</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Libraries.txt" download>Arduino Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Python Libraries.txt" download>Python Libraries</a></li>
-         <li class="list-group-item"><a href="downloads/Arduino Explanation.txt" download>Explain Arduino Code</a></li>
-         <li class="list-group-item"><a href="downloads/Python Explanation.txt" download>Explain Python Code</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 1.0.zip" download>Version 1.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 2.0.zip" download>Version 2.0</a></li>
-         <li class="list-group-item"><a href="downloads/smart door system 3.0.zip" download>Version 3.0</a></li>
-         <li class="list-group-item"><a href="downloads/dt-06 wifi configuration.pdf" download>DT-06 WiFi Config</a></li>
-         <li class="list-group-item"><a href="downloads/FaceRecognition Explanation.txt" download>Face Recognition</a></li>
-        </ul>
-      </div>
-    </div>
-</div>
-  
-  <!-- Bootstrap 5 (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Firebase + Logic -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+    import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
+      apiKey: "AIzaSyC6wL_g_L_m0_j-z_n_o-x_c_m_d_f-g_h_j-k_l_p-q_r-s_t-u_v-w_x-y-z",
       authDomain: "smart-door-system-project.firebaseapp.com",
       databaseURL: "https://smart-door-system-project-default-rtdb.firebaseio.com",
       projectId: "smart-door-system-project",
@@ -234,18 +153,14 @@
     window.closeInnerMenus = function (parentId) {
       setTimeout(() => {
         let parent = document.querySelector(parentId);
-        if (parent && !parent.classList.contains("show")) {
-          let opened = parent.querySelectorAll(".collapse.show");
-          opened.forEach(el => {
-            let bsCollapse = bootstrap.Collapse.getInstance(el);
-            if (bsCollapse) {
-              bsCollapse.hide();
-            }
-          });
+        if (parent && parent.classList.contains("collapsed")) {
+          // Do nothing, the menu is already collapsed
+        } else if (parent) {
+          // Programmatically click the button to collapse the menu
+          parent.click();
         }
-      }, 200);
+      }, 100);
     };
   </script>
 </body>
 </html>
-
