--- a/control.html
+++ b/control.html
@@ -27,8 +27,14 @@
       box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px;
     }
     .btn-toggle{
-      width:100%; text-align:left; padding:16px 20px; font-weight:700; color:#fff;
-      background:transparent; border:0;
+  display:block;
+      width:100%;
+      text-align:center;
+      padding:16px 20px;
+      font-weight:700;
+      color:#fff;
+      background:transparent;
+      border:0;
     }
     .btn-toggle:hover{ background:rgba(255,255,255,.05); }
     .list-group-dark .list-group-item{
@@ -248,6 +254,7 @@
   </script>
 </body>
 </html>
+
 
 
 
