--- a/control.html
+++ b/control.html
@@ -24,7 +24,7 @@
     }
     .control-card{
       background:var(--card); border:0; border-radius:16px; overflow:hidden;
-      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px ;  width: 100%  ;
+      box-shadow:0 10px 30px rgba(0,0,0,.35); margin-bottom:16px ;  width: 90%  ;
     }
     .btn-toggle{
   display:block;
@@ -44,6 +44,18 @@
     .ms-3{ margin-left:1rem !important; }
     button.cmd-btn {background:none;border:none;color:white;text-align:left;width:100%;}
     button.cmd-btn:hover {text-decoration:underline;}
+
+    #aiResponse, #aiLoading {
+        padding: 16px;
+        margin-top: 16px;
+        background-color: #4a4a4a;
+        border-radius: 8px;
+        font-family: monospace;
+        white-space: pre-wrap;
+    }
+    #aiLoading {
+        text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -157,9 +169,7 @@
       </div>
     </div>
 
-  </div>
-
-<!-- ========== ADD-ON OPTIONS ========== -->
+    <!-- ========== ADD-ON OPTIONS ========== -->
     <div class="card control-card">
       <button type="button" class="btn-toggle"
               data-bs-toggle="collapse" data-bs-target="#addonOptions"
@@ -173,6 +183,8 @@
         </ul>
       </div>
     </div>
+
+
 
     <!-- ========== EXPLANATION ========== -->
     <div class="card control-card mb-5">
@@ -198,7 +210,7 @@
         </ul>
       </div>
     </div>
-</div>
+  </div>
   
   <!-- Bootstrap 5 (JS) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -254,6 +266,7 @@
   </script>
 </body>
 </html>
+
 
 
 
